# CustomerChurn-Prediction_System

./: .gitignore  README.md  environment.yml  pyproject.toml  setup_env.bat
dataHub/: requirements.txt
dataHub/notebooks/exploratory/: exploratory.ipynb
docs/: Setup.md
exceptions/: CustomException.py
utils/: CustomLogger.py
